gccida/g2/force_nonfallthru_and_redirect
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1407:4: error: expected ';' after expression
rtx v30; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1407:5: error: use of undeclared identifier 'v30'
rtx v30; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1414:5: error: expected ';' after expression
edge succ; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1414:6: error: use of undeclared identifier 'succ'
edge succ; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1415:5: error: expected ';' after expression
edge v39; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1415:6: error: use of undeclared identifier 'v39'
edge v39; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1432:1: error: use of undeclared identifier 'succ'
succ = entry_exit_blocks[0].succ; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1434:6: error: use of undeclared identifier 'succ'
if ( succ ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1436:11: error: use of undeclared identifier 'succ'
if ( e == succ ) 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1446:1: error: use of undeclared identifier 'v39'
v39 = succ; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1446:7: error: use of undeclared identifier 'succ'
v39 = succ; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1447:1: error: use of undeclared identifier 'succ'
succ = succ->succ_next; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1447:8: error: use of undeclared identifier 'succ'
succ = succ->succ_next; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1448:7: error: use of undeclared identifier 'succ'
if ( !succ ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1450:11: error: use of undeclared identifier 'succ'
if ( e == succ ) 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1452:16: error: use of undeclared identifier 'v39'
p_succ_next = &v39->succ_next; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1487:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v34.rtwint = ( __int64)rtx[1].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1595:1: error: use of undeclared identifier 'v30'
v30 = src->end; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/cfgrtl.c:1604:1: error: use of undeclared identifier 'v30'
v30 = src->end; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/force_nonfallthru_and_redirect/src/obj/cfgrtl.o] Error 1
